--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "jade-html-loader": "0.0.3",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
+  },
+  "dependencies": {
+    "angular": "^1.4.7",
+    "angular-bootstrap": "^0.12.2",
+    "angular-sanitize": "^1.4.7",
+    "angular-ui-router": "^0.2.15"
   }
 }
