--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "angular": "^1.4.7",
     "angular-bootstrap": "^0.12.2",
     "angular-sanitize": "^1.4.7",
-    "angular-ui-router": "^0.2.15"
+    "angular-ui-router": "^0.2.15",
+    "blockapps-js": "^2.2.1"
   }
 }
